--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,10 @@ logging.file.path=/logging/global/logs
 logging.file.name=${logging.file.path}/global.log
 logging.logback.rollingpolicy.max-file-size=5MB
 logging.logback.rollingpolicy.max-history=5
+
+# flyway configration
+spring.flyway.enabled=true
+# we can provide a comma-separated list of one or more classpath: or filesystem: locations
+spring.flyway.locations=classpath:db/migration
+#used if database has some already table
+spring.flyway.baseline-on-migrate=true
