--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,15 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 #used if database has some already table
 spring.flyway.baseline-on-migrate=true
+
+#swagger configuration
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/documents
+springdoc.swagger-ui.operationsSorter=class
+springdoc.packageToScan=com.global.springreview.controller
+#springdoc.pathsToMatch=/employee
+
+application-description=Review Project
+application-version=1.1
