added last update before security and test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ logging.file.name=${logging.file.path}/global.log
 logging.logback.rollingpolicy.max-file-size=5MB
 logging.logback.rollingpolicy.max-history=5
 
-# flyway configration
+# flyway configuration
 spring.flyway.enabled=true
 # we can provide a comma-separated list of one or more classpath: or filesystem: locations
 spring.flyway.locations=classpath:db/migration
